--- a/src/templates/partial/_main.html
+++ b/src/templates/partial/_main.html
@@ -1,2 +1,5 @@
-<div class="container">
-</div>
+<main class="main">
+
+    <p>Betting, lottery or gambling business? No problem! We're real pros at this!</p>
+
+</main>
