--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="{{ description }}">
     <title>{% if title %}{{ title }}{% else %}Draft{% endif %}</title>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
