--- a/src/templates/partial/_main.html
+++ b/src/templates/partial/_main.html
@@ -1,5 +1,10 @@
 <main class="main">
 
-    <p>Betting, lottery or gambling business? No problem! We're real pros at this!</p>
+    <form action="/" class="form main__form">
+        <input type="text" class="form__name">
+        <input type="email" class="form__email">
+        <input type="text" class="form__site">
+        <button type="button" class="button form__button">Get started!</button>
+    </form>
 
 </main>
