--- a/src/templates/partial/_header.html
+++ b/src/templates/partial/_header.html
@@ -2,6 +2,8 @@
 
     <div class="header__logo">
         <img src="img/logo_tripplepay.svg" alt="TripplePay Logo" width="200">
-    </div>    
+    </div>
+    <h1 class="header__title">Betting, lottery or gambling business?<br>No problem! We're real pros at this!</h1>
+    <p class="header__subtitle">We'll help you start processing and keep you in the business.</p>
 
 </header>
