--- a/src/templates/partial/_main.html
+++ b/src/templates/partial/_main.html
@@ -1,4 +1,4 @@
-<main class="main">
+<section class="main">
 
     <form action="/" class="form main__form">
         <input type="text" class="form__name">
@@ -7,4 +7,47 @@
         <button type="button" class="button form__button">Get started!</button>
     </form>
 
-</main>
+    <div class="main__help">
+        <h2 class="main__title">How to open a high-risk merchant account</h2>
+
+        <figure class="step main__step">
+            <img src="img/step_contact.svg" alt="Step 1" class="step__image">
+            <figcapture class="step__caption">
+                <h3 class="step__title">Contact Us</h3>
+                <p class="step__text">Fill out an application to have our experts review it and advise you on the appropriate banking partners from our large network.</p>
+            </figcapture>
+        </figure>
+        <figure class="step main__step">
+            <img src="img/step_bank.svg" alt="Step 2" class="step__image">
+            <figcapture class="step__caption">
+                <h3 class="step__title">Contact the bank</h3>
+                <p class="step__text">Our experts will initiate the approval process at one of our trusted banks. Our team will support you along the way.</p>
+            </figcapture>
+        </figure>
+        <figure class="step main__step">
+            <img src="img/step_integration.svg" alt="Step 3" class="step__image">
+            <figcapture class="step__caption">
+                <h3 class="step__title">Integration</h3>
+                <p class="step__text">Once the approval is received, activate the MID and start the payment gateway integration process to accept your first payment.</p>
+            </figcapture>
+        </figure>
+
+    </div>
+
+    <div class="slick main__slick">
+        <button class="slick__button">&lt;</button>
+        <img src="img/slick_visa.png" alt="VISA" class="slick__img">
+        <img src="img/slick_mastercard.png" alt="Mastercard" class="slick__img">
+        <img src="img/slick_pci.png" alt="PCI" class="slick__img">
+        <img src="img/slick_visa-electron.png" alt="VISA-electron" class="slick__img">
+        <img src="img/slick_maestro.png" alt="Maestro" class="slick__img">
+        <img src="img/slick_ae.png" alt="American Express" class="slick__img">
+        <img src="img/slick_diners.png" alt="Diners Club" class="slick__img">
+        <img src="img/slick_jsb.png" alt="JSB" class="slick__img">
+        <img src="img/slick_mastercard-secure.png" alt="Mastercard SecureCode" class="slick__img">
+        <img src="img/slick_unionpay.png" alt="Unionpay" class="slick__img">
+
+        <button class="slick__button">&gt;</button>
+    </div>
+
+</section>
