--- a/src/sass/helpers/_mixins.scss
+++ b/src/sass/helpers/_mixins.scss
@@ -4,3 +4,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+@mixin placeholder {
+    &.placeholder { @content; }
+    &:-moz-placeholder { @content; }
+    &:-ms-input-placeholder { @content; }
+    &::-moz-placeholder { @content; }
+    &::-webkit-input-placeholder { @content; }
+}
