--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -13,6 +13,10 @@ $color-text-secondary:  #ffffff;
 $color-text-form:       #9d9d9c;
 $color-primary:         #3f82f0;
 $color-secondary:       #0099df;
+$color-accent: 			#124fb3;
 $color-footer:          #182a53;
 $color-grad-start:      #084a7c;
 $color-grad-end:        #2ba3c3;
+
+// TRANSITIONS AND ANIMATIONS
+$delay-global: 300ms;
