--- a/src/templates/partial/_footer.html
+++ b/src/templates/partial/_footer.html
@@ -1,7 +1,24 @@
 <footer class="footer">
 
+    <div class="slick main__slick">
+        <button class="slick__button">&lt;</button>
+        <img src="img/slick_visa.png" alt="VISA" class="slick__img">
+        <img src="img/slick_mastercard.png" alt="Mastercard" class="slick__img">
+        <img src="img/slick_pci.png" alt="PCI" class="slick__img">
+        <img src="img/slick_visa-electron.png" alt="VISA-electron" class="slick__img">
+        <img src="img/slick_maestro.png" alt="Maestro" class="slick__img">
+        <img src="img/slick_ae.png" alt="American Express" class="slick__img">
+        <img src="img/slick_diners.png" alt="Diners Club" class="slick__img">
+        <img src="img/slick_jsb.png" alt="JSB" class="slick__img">
+        <img src="img/slick_mastercard-secure.png" alt="Mastercard SecureCode" class="slick__img">
+        <img src="img/slick_unionpay.png" alt="Unionpay" class="slick__img">
+        <img src="img/slick_visa-verified.png" alt="Verified by VISA" class="slick__img">
+
+        <button class="slick__button">&gt;</button>
+    </div>
+
 	<h2 class="footer__title">Take the first toward successful payment processing now!</h2>
-	<button class="button footer__button"></button>
+	<a href="#form-start" class="button footer__button">Apply now!</a>
 
 	<div class="footer__bottom">
 		<a href="#" class="footer__link">Privacy Policy</a>
