--- a/src/templates/partial/_header.html
+++ b/src/templates/partial/_header.html
@@ -1,9 +1,14 @@
 <header class="header">
 
-    <div class="header__logo">
-        <img src="img/logo_tripplepay.svg" alt="TripplePay Logo" width="200">
-    </div>
+    <img src="img/logo_tripplepay.svg" alt="TripplePay Logo" class="header__logo">
     <h1 class="header__title">Betting, lottery or gambling business?<br>No problem! We're real pros at this!</h1>
     <p class="header__subtitle">We'll help you start processing and keep you in the business.</p>
+
+    <form action="/" id="form-start" class="form header__form">
+        <input type="text" placeholder="Name" class="form__input">
+        <input type="email" placeholder="Email" class="form__input">
+        <input type="text" placeholder="Site URL" class="form__input">
+        <button type="submit" class="button form__button">Get started!</button>
+    </form>
 
 </header>
