--- a/src/templates/partial/_header.html
+++ b/src/templates/partial/_header.html
@@ -1,5 +1,17 @@
 <header class="header">
 
+    <div class="header__wave header__wave_updown">
+        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave"/></svg>
+    
+        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave-two"/></svg>
+    </div>
+
+    <div class="header__wave header__wave_bottom">
+        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave"/></svg>
+    
+        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave-two"/></svg>
+    </div>   
+            
     <img src="img/logo_tripplepay.svg" alt="TripplePay Logo" class="header__logo">
     <h1 class="header__title">Betting, lottery or gambling business?<br>No problem! We're real pros at this!</h1>
     <p class="header__subtitle">We'll help you start processing and keep you in the business.</p>
@@ -11,4 +23,5 @@
         <button type="submit" class="button form__button">Get started!</button>
     </form>
 
+    <img src="img/bg_wave.svg" alt="wave-bg" class="header__bottom">
 </header>
