--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,10 +1,25 @@
 .header {
-    padding-bottom: -20em;
+    position: relative;
     background-color: $color-grad-end;
     background: linear-gradient(to right, $color-grad-start, $color-grad-end);
     text-align: center;
+
+    &__wave {
+        position: absolute;
+        width: 100%;
+        height: 100px;
+    }
+
+    &__wave_updown {
+        transform: rotate(180deg);
+    }
+
+    &__wave_bottom {
+        bottom: 0;
+    }
     
     &__logo {
+        position: relative;
         padding: 1.5em;
         width: 200px * 0.8;
         transition-duration: $delay-global;
@@ -30,5 +45,14 @@
         left: 50%;
         transform: translate(-50%, -50%);
         max-width: 1080px;
+        z-index: 1;
+    }
+
+    &__bottom {
+        display: block;
+        position: absolute;
+        height: 50px;
+        width: 100%;
+        transform: translate(0, -50%);
     }
 }
