--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -14,7 +14,9 @@
 		{% block content %}{% endblock %}
 	</div>
 
-	<script src="js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 </html>
