--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -4,10 +4,12 @@
 	background-color: $color-secondary;
 	border: none;
 	border-radius: 5px;
+	box-shadow: 2px 3px 22px 2px rgba(0, 0, 0, 0.2);
 
 	font-family: $font-secondary;
 	font-size: $font-main;
 	color: $color-text-secondary;
+	text-decoration: none;
 
 	transition-duration: $delay-global;
 
@@ -19,5 +21,10 @@
 	&:hover {
 		cursor: pointer;
 		background-color: $color-accent;
+	}
+
+	&_apply {
+		padding-left: 4em;
+		padding-right: 4em;
 	}
 }
