--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -37,18 +37,16 @@
 
 	&__slick {
         position: absolute;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(50%, -50%);
+        right: 50%;
 		max-width: 1080px;
-		height: 160px;
 		z-index: 1;
-
-		overflow: hidden;
 	}
 	
 	&__bottom {
 		position: fixed;
 		bottom: 0;
+		box-sizing: border-box;
 		width: 100%;
 		padding: 0.5em 1em;
 		z-index: 2;
