--- a/src/templates/partial/_footer.html
+++ b/src/templates/partial/_footer.html
@@ -12,9 +12,7 @@
             <svg width="100%" height="100%" class="wave"><path class="feel-the-wave-two"/></svg>
         </div> 
 
-        <div class="slick form footer__slick">
-            <button class="slick__button">&lt;</button>
-    
+        <div class="slick footer__slick">
             <img src="img/slick_visa.png" alt="VISA" class="slick__img">
             <img src="img/slick_mastercard.png" alt="Mastercard" class="slick__img">
             <img src="img/slick_pci.png" alt="PCI" class="slick__img">
@@ -26,8 +24,6 @@
             <img src="img/slick_mastercard-secure.png" alt="Mastercard SecureCode" class="slick__img">
             <img src="img/slick_unionpay.png" alt="Unionpay" class="slick__img">
             <img src="img/slick_visa-verified.png" alt="Verified by VISA" class="slick__img">
-    
-            <button class="slick__button">&gt;</button>
         </div>
     
         <h2 class="footer__title">Take the first toward successful payment processing now!</h2>
