--- a/src/templates/partial/_header.html
+++ b/src/templates/partial/_header.html
@@ -15,11 +15,12 @@
     <p class="header__subtitle">We'll help you start processing and keep you in the business.</p>
 
     <form action="/" id="form-start" class="form header__form">
-        <input type="text" placeholder="Name" class="form__input">
-        <input type="email" placeholder="Email" class="form__input">
-        <input type="text" placeholder="Site URL" class="form__input">
+        <div class="form__fields">
+            <input type="text" placeholder="Name" class="form__input">
+            <input type="email" placeholder="Email" class="form__input">
+            <input type="text" placeholder="Site URL" class="form__input">
+        </div>
         <button type="submit" class="button form__button">Get started!</button>
     </form>
 
-    <img src="img/bg_wave.svg" alt="wave-bg" class="header__bottom">
 </header>
