--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -7,6 +7,14 @@
 	background-color: $color-text-secondary;
 	border-radius: 5px;
 	box-shadow: 5px 10px 25px 2px rgba(0, 0, 0, 0.2);
+
+	@include phablet {
+		padding: 3em;
+	}
+
+	@include desktop {
+		padding: 3em 5em;
+	}
 	
 	&__input {
 		display: block;
@@ -17,6 +25,7 @@
 		padding: 0.7em 1em;
 		border: 1px solid $color-text-form;
 		border-radius: 5px;
+		transition-duration: $delay-global;
 
 		@include placeholder {
 			font-family: $font-primary;
@@ -33,15 +42,29 @@
 			outline: none;
 		}
 
-		// &::after {
-		// 	content: '';
-		// 	display: table;
-		// 	clear: both;
-		// }
+		@include tablet {
+			float: left;
+			width: 30%;
+			margin-right: 5%;
+			@include clearfix {}
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+
 	}
 
 	&__button {
 		width: 100%;
+		
+		@include tablet {
+			width: 50%;
+		}
+
+		@include desktop {
+			width: 30%;
+		}
 	}
 
 }
