--- a/src/sass/blocks/_main.scss
+++ b/src/sass/blocks/_main.scss
@@ -1,13 +1,54 @@
 .main {
 	
 	&__help {
-		margin-top: 16em;
-		margin-bottom: 8em;
+		margin: 16em auto 8em auto;
+		padding: 0 1em;
+		max-width: 1080px;
 		text-align: center;
+		@include clearfix;
+		
+		@include tablet {
+			margin-top: 12em;
+			margin-bottom: 8em;
+			padding: 0 2em;
+			width: 80%;
+		}
+		
+		@include desktop {
+			margin-top: 13em;
+			margin-bottom: 12em;
+			padding: 0 3em;			
+		}
+	}
+
+	&__step {
+		max-width: 13em;
+		margin: 0 auto;
+
+		@include phablet {
+			float: left;
+			max-width: 100%;
+			width: 30%;
+			margin-right: 5%;
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
 	}
 
 	&__title {
 		font-family: $font-secondary;
 		font-size: $font-title * 0.8;
+		transition-duration: $delay-global;
+		
+		@include tablet {
+			margin-bottom: 1.5em;
+			font-size: $font-title * 0.9;
+		}
+
+		@include desktop {
+			font-size: $font-title;
+		}
 	}
 }
