--- a/src/templates/partial/_header.html
+++ b/src/templates/partial/_header.html
@@ -11,7 +11,7 @@
     </div>   
             
     <img src="img/logo_tripplepay.svg" alt="TripplePay Logo" class="header__logo">
-    <h1 class="header__title">Betting, lottery or gambling business?<br>No problem! We're real pros at this!</h1>
+    <h1 class="header__title">Betting, lottery or gambling business? No problem! We're real pros at this!</h1>
     <p class="header__subtitle">We'll help you start processing and keep you in the business.</p>
 
     <form action="/" id="form-start" class="form header__form">
