--- a/src/sass/blocks/_step.scss
+++ b/src/sass/blocks/_step.scss
@@ -1,11 +1,23 @@
 .step {
-	max-width: 13em;
-	margin: 0 auto;
+	transition-duration: $delay-global;
 
 	&__image {
-		height: 100px;
+		height: 120px;
+		transition-duration: $delay-global;
+
+		@include phablet {
+			height: 80px;
+		}
+
+		@include tablet {
+			height: 100px;
+		}
 	}
 
+	&__caption {
+		display: block;
+		padding: 0.5em;
+	}
 	&__title {
 		font-family: $font-secondary;
 		font-size: $font-subtitle;
