add smooth scroll

--- a/src/templates/partial/_footer.html
+++ b/src/templates/partial/_footer.html
@@ -27,7 +27,7 @@
         </div>
     
         <h2 class="footer__title">Take the first toward successful payment processing now!</h2>
-        <a href="#form-start" class="button button_apply footer__button">Apply now!</a>
+        <a href="#form-start" class="button button_apply footer__button js-button-apply">Apply now!</a>
     </div>
 
 	<div class="footer__bottom">
